Add NIO Sample Add RandomGenerator